--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "author": "nguyen.van.thang@framgia.com",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "css-loader": "^0.28.11",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-dev-server": "^3.1.4"
   },
@@ -34,7 +40,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-import-resolver-webpack": "^0.10.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
