--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["react", "es2015", "stage-0", "flow"],
-  "plugins": ["transform-async-to-generator", "transform-runtime"]
+  "plugins": ["babel-plugin-transform-class-properties", "transform-async-to-generator", "transform-runtime"]
 }
