--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "file-loader": "^1.1.11",
     "jest": "^23.0.1",
-    "prop-types": "^15.6.1",
+    "lodash": "^4.17.10",
+    "memoize-one": "^3.1.1",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
+    "react-autosuggest": "^9.3.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-facebook-login": "^4.0.1",
@@ -44,6 +48,7 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
