--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "style-loader": "^0.21.0",
+    "styled-components": "^3.3.3",
     "webpack": "^4.8.3",
     "webpack-dev-server": "^3.1.4"
   },
