--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-jest": "^23.0.1",
     "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.1.1",
+    "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
