--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
+    "graceful-fs": "^4.1.11",
     "jest": "^23.0.1",
+    "json-server": "^0.14.0",
     "lodash": "^4.17.10",
+    "lowdb": "^1.0.0",
     "memoize-one": "^3.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
@@ -59,6 +64,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "coveralls": "^3.0.1",
+    "dotenv": "^6.0.0",
+    "dotenv-webpack": "^1.5.7",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
