--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
+    "react-avatar-editor": "^11.0.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-facebook-login": "^4.0.1",
