--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-saga": "^0.16.0",
     "style-loader": "^0.21.0",
     "styled-components": "^3.3.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-dev-server": "^3.1.4"
   },
